apps/jellyfin/base/service.yaml
# k3s-gitops/apps/jellyfin/base/service.yaml
# ---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: jellyfin
  annotations:
    argocd.argoproj.io/sync-wave: "0"
  labels:
    app: jellyfin
    app.kubernetes.io/name: jellyfin
spec:
  type: ClusterIP
  selector:
    app: jellyfin
  ports:
    - name: http
      port: 8096
      targetPort: 8096
      protocol: TCP
